Update swift/xcode notes

--- a/ios.org
+++ b/ios.org
@@ -1,40 +1,45 @@
 * xcode
 ** Navigation
 *** View
-    * S-ret: Show standard editor
-    * S-M-ret: Show assistant editor
+    * s-ret: Show standard editor
+    * s-M-ret: Show assistant editor
 *** Utilities
-    * S-M-0: Toggle utilities
+    * s-M-0: Toggle utilities
 
-    * S-M-1: Show the File inspector
-    * S-M-2: Show Quick Help inspector
-    * S-M-3: Show Identity inspector
-    * S-M-4: Show Attributes inspector
-    * S-M-5: Show Size inspector
-    * S-M-6: Show Connections inspector      
+    * s-M-1: Show the File inspector
+    * s-M-2: Show Quick Help inspector
+    * s-M-3: Show Identity inspector
+    * s-M-4: Show Attributes inspector
+    * s-M-5: Show Size inspector
+    * s-M-6: Show Connections inspector      
       
-    * S-M-C-1: Show File Template Library
-    * S-M-C-2: Show Code Snippet Library
-    * S-M-C-3: Show Object Library
-    * S-M-C-4: Show Media Library
+    * s-M-C-1: Show File Template Library
+    * s-M-C-2: Show Code Snippet Library
+    * s-M-C-3: Show Object Library
+    * s-M-C-4: Show Media Library
 *** Navigator
-    * S-0: Toggle navigator
+    * s-0: Toggle navigator
 
-    * S-1: Show the Project navigator
-    * S-2: Show the Symbol navigator
-    * S-3: Show the Find navigator
-    * S-4: Show the Issue navigator
-    * S-5: Show the Test navigator
-    * S-6: Show the Debug navigator
-    * S-7: Show the Breakpoint navigator
-    * S-8: Show the Report navigator
+    * s-1: Show the Project navigator
+    * s-2: Show the Symbol navigator
+    * s-3: Show the Find navigator
+    * s-4: Show the Issue navigator
+    * s-5: Show the Test navigator
+    * s-6: Show the Debug navigator
+    * s-7: Show the Breakpoint navigator
+    * s-8: Show the Report navigator
 *** Product
-    * S-r: Run
-    * S-k: Open keyboard
-    * S-larrow: Rotate
-    * S-rarrow: Rotate
+    * s-r: Run
+    * s-k: Open keyboard
+    * s-larrow: Rotate
+    * s-rarrow: Rotate
 *** Editor
     * C-6: Functions menu
+*** Debug
+    * s-S-y: Toggle debug menu
+*** Testing
+    * s-u: Run all tests
+
 * Swift
 ** Notes
    * AppDelegate.swift
@@ -45,3 +50,7 @@
    * @-syntax for attributes?
    * prefix-dot syntax? e.g. .PhotoLibrary
      Answer: abbreviated enumeration form - can be used any time the enumeration is known
+   * downcasting?
+   * `static let` vs `let` - constant applies to struct itself, not instances of it, will never change
+   * protocol composition style?
+   * convenience initialisers?
